--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest]
     steps:
-      - name: Checkout code
+      - name: Checkout 
         uses: actions/checkout@v2
       
-      - name: Set up Python
+      - name: Set up
         uses: actions/setup-python@v2
         with:
           python-version: '3.6'
@@ -20,6 +20,6 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install pytest
       
-      - name: Run tests
+      - name: tests
         run: |
           pytest
